runtime/tests/suite/call_indirect.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\f1\80\80\80\00\16\60"
  "\00\00\60\00\01\7f\60\00\01\7e\60\00\01\7d\60\00"
  "\01\7c\60\01\7f\01\7f\60\01\7e\01\7e\60\01\7d\01"
  "\7d\60\01\7c\01\7c\60\02\7d\7f\01\7f\60\02\7f\7e"
  "\01\7e\60\02\7c\7d\01\7d\60\02\7e\7c\01\7c\60\01"
  "\7f\01\7f\60\01\7e\01\7e\60\01\7d\01\7d\60\01\7c"
  "\01\7c\60\04\7e\7c\7f\7e\01\7f\60\01\7e\01\7f\60"
  "\04\7e\7c\7f\7e\00\60\01\7e\00\60\01\7f\01\7e\03"
  "\a8\80\80\80\00\27\01\02\03\04\05\06\07\08\0a\0c"
  "\09\0b\0d\0e\0f\10\00\01\02\03\04\02\01\02\03\04"
  "\01\02\03\04\0a\15\06\06\05\05\00\00\00\04\85\80"
  "\80\80\00\01\70\01\17\17\07\9b\82\80\80\00\15\08"
  "\74\79\70\65\2d\69\33\32\00\11\08\74\79\70\65\2d"
  "\69\36\34\00\12\08\74\79\70\65\2d\66\33\32\00\13"
  "\08\74\79\70\65\2d\66\36\34\00\14\0a\74\79\70\65"
  "\2d\69\6e\64\65\78\00\15\0e\74\79\70\65\2d\66\69"
  "\72\73\74\2d\69\33\32\00\16\0e\74\79\70\65\2d\66"
  "\69\72\73\74\2d\69\36\34\00\17\0e\74\79\70\65\2d"
  "\66\69\72\73\74\2d\66\33\32\00\18\0e\74\79\70\65"
  "\2d\66\69\72\73\74\2d\66\36\34\00\19\0f\74\79\70"
  "\65\2d\73\65\63\6f\6e\64\2d\69\33\32\00\1a\0f\74"
  "\79\70\65\2d\73\65\63\6f\6e\64\2d\69\36\34\00\1b"
  "\0f\74\79\70\65\2d\73\65\63\6f\6e\64\2d\66\33\32"
  "\00\1c\0f\74\79\70\65\2d\73\65\63\6f\6e\64\2d\66"
  "\36\34\00\1d\08\64\69\73\70\61\74\63\68\00\1e\13"
  "\64\69\73\70\61\74\63\68\2d\73\74\72\75\63\74\75"
  "\72\61\6c\00\1f\03\66\61\63\00\20\03\66\69\62\00"
  "\21\04\65\76\65\6e\00\22\03\6f\64\64\00\23\07\72"
  "\75\6e\61\77\61\79\00\24\0e\6d\75\74\75\61\6c\2d"
  "\72\75\6e\61\77\61\79\00\25\09\9d\80\80\80\00\01"
  "\00\41\00\0b\17\00\01\02\03\04\05\06\07\0a\08\0b"
  "\09\20\21\22\23\24\25\26\0c\0d\0e\0f\0a\90\85\80"
  "\80\00\27\85\80\80\80\00\00\41\b2\02\0b\85\80\80"
  "\80\00\00\42\e4\02\0b\87\80\80\80\00\00\43\00\20"
  "\73\45\0b\8b\80\80\80\00\00\44\00\00\00\00\00\c8"
  "\ae\40\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80"
  "\00\00\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80"
  "\80\80\00\00\20\00\0b\84\80\80\80\00\00\20\01\0b"
  "\84\80\80\80\00\00\20\01\0b\84\80\80\80\00\00\20"
  "\01\0b\84\80\80\80\00\00\20\01\0b\84\80\80\80\00"
  "\00\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80\80"
  "\80\00\00\20\00\0b\84\80\80\80\00\00\20\00\0b\dd"
  "\80\80\80\00\00\41\00\11\00\00\42\00\41\00\11\14"
  "\00\42\00\44\00\00\00\00\00\00\00\00\41\00\42\00"
  "\41\00\11\13\00\41\00\11\00\00\41\00\11\01\00\45"
  "\1a\41\00\11\01\00\45\1a\42\00\41\00\11\12\00\45"
  "\1a\42\00\44\00\00\00\00\00\00\00\00\41\00\42\00"
  "\41\00\11\11\00\45\1a\42\00\41\00\11\06\00\50\1a"
  "\0b\87\80\80\80\00\00\41\00\11\01\00\0b\87\80\80"
  "\80\00\00\41\01\11\02\00\0b\87\80\80\80\00\00\41"
  "\02\11\03\00\0b\87\80\80\80\00\00\41\03\11\04\00"
  "\0b\8a\80\80\80\00\00\42\e4\00\41\05\11\06\00\0b"
  "\89\80\80\80\00\00\41\20\41\04\11\05\00\0b\8a\80"
  "\80\80\00\00\42\c0\00\41\05\11\06\00\0b\8c\80\80"
  "\80\00\00\43\c3\f5\a8\3f\41\06\11\07\00\0b\90\80"
  "\80\80\00\00\44\3d\0a\d7\a3\70\3d\fa\3f\41\07\11"
  "\08\00\0b\8e\80\80\80\00\00\43\66\66\00\42\41\20"
  "\41\08\11\09\00\0b\8c\80\80\80\00\00\41\20\42\c0"
  "\00\41\09\11\0a\00\0b\95\80\80\80\00\00\44\00\00"
  "\00\00\00\00\50\40\43\00\00\00\42\41\0a\11\0b\00"
  "\0b\93\80\80\80\00\00\42\c0\00\44\66\66\66\66\66"
  "\06\50\40\41\0b\11\0c\00\0b\89\80\80\80\00\00\20"
  "\01\20\00\11\06\00\0b\89\80\80\80\00\00\42\09\20"
  "\00\11\0e\00\0b\98\80\80\80\00\00\20\00\50\04\7e"
  "\42\01\05\20\00\20\00\42\01\7d\41\0c\11\06\00\7e"
  "\0b\0b\a2\80\80\80\00\00\20\00\42\01\58\04\7e\42"
  "\01\05\20\00\42\02\7d\41\0d\11\06\00\20\00\42\01"
  "\7d\41\0d\11\06\00\7c\0b\0b\95\80\80\80\00\00\20"
  "\00\45\04\7f\41\2c\05\20\00\41\01\6b\41\0f\11\05"
  "\00\0b\0b\96\80\80\80\00\00\20\00\45\04\7f\41\e3"
  "\00\05\20\00\41\01\6b\41\0e\11\05\00\0b\0b\87\80"
  "\80\80\00\00\41\10\11\00\00\0b\87\80\80\80\00\00"
  "\41\12\11\00\00\0b\87\80\80\80\00\00\41\11\11\00"
  "\00\0b"
)
(assert_return (invoke "type-i32") (i32.const 306))
(assert_return (invoke "type-i64") (i64.const 356))
(assert_return (invoke "type-f32") (f32.const 0x1.e64p+11))
(assert_return (invoke "type-f64") (f64.const 0x1.ec8p+11))
(assert_return (invoke "type-index") (i64.const 100))
(assert_return (invoke "type-first-i32") (i32.const 32))
(assert_return (invoke "type-first-i64") (i64.const 64))
(assert_return (invoke "type-first-f32") (f32.const 0x1.51eb86p+0))
(assert_return (invoke "type-first-f64") (f64.const 0x1.a3d70a3d70a3dp+0))
(assert_return (invoke "type-second-i32") (i32.const 32))
(assert_return (invoke "type-second-i64") (i64.const 64))
(assert_return (invoke "type-second-f32") (f32.const 0x1p+5))
(assert_return (invoke "type-second-f64") (f64.const 0x1.0066666666666p+6))
(assert_return (invoke "dispatch" (i32.const 5) (i64.const 2)) (i64.const 2))
(assert_return (invoke "dispatch" (i32.const 5) (i64.const 5)) (i64.const 5))
(assert_return (invoke "dispatch" (i32.const 12) (i64.const 5)) (i64.const 120))
(assert_return (invoke "dispatch" (i32.const 13) (i64.const 5)) (i64.const 8))
(assert_return (invoke "dispatch" (i32.const 20) (i64.const 2)) (i64.const 2))
(assert_trap
  (invoke "dispatch" (i32.const 0) (i64.const 2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 15) (i64.const 2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 23) (i64.const 2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const -1) (i64.const 2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const 1213432423) (i64.const 2))
  "undefined element"
)
(assert_return (invoke "dispatch-structural" (i32.const 5)) (i64.const 9))
(assert_return (invoke "dispatch-structural" (i32.const 5)) (i64.const 9))
(assert_return (invoke "dispatch-structural" (i32.const 12)) (i64.const 362880))
(assert_return (invoke "dispatch-structural" (i32.const 20)) (i64.const 9))
(assert_trap
  (invoke "dispatch-structural" (i32.const 11))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural" (i32.const 22))
  "indirect call type mismatch"
)
(assert_return (invoke "fac" (i64.const 0)) (i64.const 1))
(assert_return (invoke "fac" (i64.const 1)) (i64.const 1))
(assert_return (invoke "fac" (i64.const 5)) (i64.const 120))
(assert_return (invoke "fac" (i64.const 25)) (i64.const 7034535277573963776))
(assert_return (invoke "fib" (i64.const 0)) (i64.const 1))
(assert_return (invoke "fib" (i64.const 1)) (i64.const 1))
(assert_return (invoke "fib" (i64.const 2)) (i64.const 2))
(assert_return (invoke "fib" (i64.const 5)) (i64.const 8))
(assert_return (invoke "fib" (i64.const 20)) (i64.const 10946))
(assert_return (invoke "even" (i32.const 0)) (i32.const 44))
(assert_return (invoke "even" (i32.const 1)) (i32.const 99))
(assert_return (invoke "even" (i32.const 100)) (i32.const 44))
(assert_return (invoke "even" (i32.const 77)) (i32.const 99))
(assert_return (invoke "odd" (i32.const 0)) (i32.const 99))
(assert_return (invoke "odd" (i32.const 1)) (i32.const 44))
(assert_return (invoke "odd" (i32.const 200)) (i32.const 99))
(assert_return (invoke "odd" (i32.const 77)) (i32.const 44))
(assert_exhaustion (invoke "runaway") "call stack exhausted")
(assert_exhaustion (invoke "mutual-runaway") "call stack exhausted")
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 anyfunc)(func (result i32)  (call_indirect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 anyfunc)(func (result i32)  (call_indirect (param i32) (type $sig) (result i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 anyfunc)(func (result i32)  (call_indirect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 anyfunc)(func (result i32)  (call_indirect (result i32) (type $sig) (param i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 anyfunc)(func (result i32)  (call_indirect (result i32) (param i32) (type $sig)    (i32.const 0) (i32.const 0)  ))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(table 0 anyfunc)(func (result i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(table 0 anyfunc)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))"
  )
  "unexpected token"
)
(assert_malformed
  (module quote
    "(type $sig (func))(table 0 anyfunc)(func (result i32)  (call_indirect (type $sig) (result i32) (i32.const 0)))"
  )
  "inline function type"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 anyfunc)(func (result i32)  (call_indirect (type $sig) (result i32) (i32.const 0)))"
  )
  "inline function type"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32) (result i32)))(table 0 anyfunc)(func  (call_indirect (type $sig) (param i32) (i32.const 0) (i32.const 0)))"
  )
  "inline function type"
)
(assert_malformed
  (module quote
    "(type $sig (func (param i32 i32) (result i32)))(table 0 anyfunc)(func (result i32)  (call_indirect (type $sig) (param i32) (result i32)    (i32.const 0) (i32.const 0)  ))"
  )
  "inline function type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8d\80\80\80\00"
    "\01\87\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "unknown table"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\11\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7e\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\00\11\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01\87"
    "\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01"
    "\87\80\80\80\00\00\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00"
    "\00\41\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\98\80\80\80\00\01\92\80\80\80\00"
    "\00\44\00\00\00\00\00\00\00\40\41\01\41\00\11\00"
    "\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\01\01\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8f\80\80\80\00\01\89"
    "\80\80\80\00\00\41\00\42\01\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\01\41\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\41\01\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7c\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\44\00\00\00\00\00\00\f0\3f\41"
    "\01\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\41\01\44\00\00\00\00\00\00\f0"
    "\3f\41\00\11\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8d\80\80\80\00\01\87\80\80\80\00"
    "\00\41\00\11\01\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\91\80\80\80\00\01\8b\80\80\80\00"
    "\00\41\00\11\94\98\db\e2\03\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
    "\01\02\02\09\88\80\80\80\00\01\00\41\00\0b\02\00"
    "\00"
  )
  "unknown function 0"
)
